--- a/src/Dockerfile-stretch
+++ b/src/Dockerfile-stretch
@@ -27,6 +27,7 @@ ARG IMAGICK_RUNTIME_REQUIREMENTS="libpng16-16 liblcms2-2 libgomp1 libltdl7 bzip2
 ARG IMAGICK_RUNTIME_REQUIREMENTS_EXTRA=""
 ARG IMAGICK_BUILD_REQUIREMENTS="curl cmake gcc libtool libedit-dev liblcms2-dev build-essential autoconf automake pkg-config libpng-dev libltdl-dev nasm"
 ARG IMAGICK_BUILD_REQUIREMENTS_EXTRA=""
+ARG IMAGICK_EXTRA_CONFIGURE_ARGS=""
 
 ARG MOZJPEG_EXTRA_CONFIGURE_ARGS=""
 ARG MOZJPEG_VERSION="bbb7550709d396aae66d5ea5fad5ef06b1ec7f59"
