--- a/src/Dockerfile-buster
+++ b/src/Dockerfile-buster
@@ -5,6 +5,7 @@ COPY root /
 ## configure default environment stuff and file permissions
 RUN set -xe; \
     chmod 755 /usr/local/bin/{docker-php-source-prepare,docker-entrypoint,docker-fpm-healthcheck,docker-php-ext-configure,docker-php-ext-enable,docker-php-ext-install,docker-php-pecl-install,docker-php-source}; \
+    rm -rf /etc/apt/preferences.d/debian_main_cmake; \
     \
         ## block packages from being installed
     	{ \
