--- a/src/Dockerfile-stretch
+++ b/src/Dockerfile-stretch
@@ -5,6 +5,10 @@ COPY root /
 ## configure default environment stuff and file permissions
 RUN set -xe; \
     chmod 755 /usr/local/bin/{docker-php-source-prepare,docker-entrypoint,docker-fpm-healthcheck,docker-php-ext-configure,docker-php-ext-enable,docker-php-ext-disable,docker-php-ext-install,docker-php-pecl-install,docker-php-source}; \
+    mkdir /home/www-data; \
+    chmod 711 /home/www-data; \
+    chown www-data:www-data /home/www-data; \
+    usermod -d /home/www-data www-data; \
     \
         ## block packages from being installed
     	{ \
