--- a/src/Dockerfile-buster
+++ b/src/Dockerfile-buster
@@ -4,7 +4,7 @@ COPY root /
 
 ## configure default environment stuff and file permissions
 RUN set -xe; \
-    chmod 755 /usr/local/bin/{docker-php-source-prepare,docker-entrypoint,docker-fpm-healthcheck,docker-php-ext-configure,docker-php-ext-enable,docker-php-ext-install,docker-php-pecl-install,docker-php-source}; \
+    chmod 755 /usr/local/bin/{docker-php-source-prepare,docker-entrypoint,docker-fpm-healthcheck,docker-php-ext-configure,docker-php-ext-enable,docker-php-ext-install,docker-php-pecl-install,docker-php-source,phpgosu}; \
     rm -rf /etc/apt/preferences.d/debian_main_cmake; \
     mkdir /home/www-data; \
     chmod 711 /home/www-data; \
